<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/image1"
        style="@style/Intro_Imagem"
        android:contentDescription="@string/intro_2_imagem"
        android:src="@drawable/intro1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/intro_2_icone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/intro_seta_esquerda" />

    <TextView
        android:id="@+id/txt1"
        style="@style/Intro_Descricao"
        android:text="@string/intro_2_msg_1"
        app:layout_constraintBottom_toBottomOf="@+id/image2"
        app:layout_constraintEnd_toStartOf="@+id/image2"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toTopOf="@+id/image2" />

    <TextView
        android:id="@+id/text1"
        style="@style/Intro_Titulo"
        android:text="@string/intro_2_msg_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        style="@style/Intro_Descricao"
        android:text="@string/intro_2_msg_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintVertical_bias="0.1" />
</android.support.constraint.ConstraintLayout>